force-app/main/default/objects/SBQQ__Quote__c/fields/CountGroup__c.field-meta.xml
<CustomField>
    <fullName>CountGroup__c</fullName>
    <label>CountGroup</label>
    <summaryForeignKey>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>