force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <formula>IF(TEXT(Quote_Line_Fields_Aux__c)=&quot;Standard&quot;,&quot;Standard&quot;,IF(TEXT(Quote_Line_Fields_Aux__c)=&quot;Line Editor&quot;,&quot;SBQQ__LineEditor&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line Fields</label>
    <type>Text</type>
</CustomField>