force-app/main/default/objects/SBQQ__Quote__c/fields/Fator_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Fator_Cliente__c</fullName>
    <label>Fator Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>