force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Line_Fields_Aux__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Fields_Aux__c</fullName>
    <label>Quote Line Fields Aux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Line Editor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>