force-app/main/default/objects/SBQQ__Quote__c/recordTypes/RecordTypeTest.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeTest</fullName>
    <active>true</active>
    <label>RecordTypeTest</label>
</RecordType>